--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
     {% load static %}
 <head>
 
-     <title>Get Ready - Coming Soon Template</title>
+     <title>   {% block title %} {% endblock %}   </title>
 <!-- 
 
 Get Ready Template
@@ -14,10 +14,13 @@ https://templatemo.com/tm-521-get-ready
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Predict's weather the review/text are Positive or Negative in Nature">
-     <meta name="keywords" content="Sentiment Anaylsis">
+     <meta name="keywords" content="Sentiment Anaylsis,Positive-Negative-review,Review">
      <meta name="team" content="Kalwani">
+     <meta name="author" content="Kalash Kalwani">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+     <link rel = "icon" href ='{% static "\images\Sentiment analysiser.png" %}'  type = "image/x-icon">
+             
      <link rel="stylesheet" href='{% static "/css/bootstrap.min.css" %}'>
      <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
      <link rel="stylesheet" href='{% static "/css/vegas1.min.css" %}'>
