--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,20 +48,18 @@ https://templatemo.com/tm-521-get-ready
        <div class="container">
          <div class="row" style="text-align: center;">
            <div class="col-md-offset-2 col-md-4 col-sm-6">
-            <h1>Navigations</h1>
-             <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/history">History</a></li>
-            </ul>
-           </div>
+            <h1>Sentiment Analysier</h1>
+            <p>The idea here is that if you have a bunch of training examples, such as I’m so happy today!, Stay happy San Diego, Coffee makes my heart happy, etc., then terms such as “happy” will have a relatively high tf-idf score when compared with other terms.</p>
+          <p>Sentiment analysis using machine learning can help any business analyze public opinion, improve customer support, and automate tasks with fast turnarounds. Not only saving you time, but also money. Sentiment analysis results will also give you real actionable insights, helping you make the right decisions. </p> 
+          </div>
 
            <div class="col-md-4 col-sm-6" >
             <!-- style="padding-top: 4vh;" -->
           
              <address>
-               <h1>Sentiment Analysier</h1>
-               <p>The idea here is that if you have a bunch of training examples, such as I’m so happy today!, Stay happy San Diego, Coffee makes my heart happy, etc., then terms such as “happy” will have a relatively high tf-idf score when compared with other terms.</p>
-             </address>
+               <h1>Multi-Layer Perceptron</h1>
+               <p>The most common type of neural network referred to as Multi-Layer Perceptron (MLP) is a function that maps input to output. MLP has a single input layer and a single output layer. In between, there can be one or more hidden layers. The input layer has the same set of neurons as that of features. Hidden layers can have more than one neuron as well. Each neuron is a linear function to which activation function is applied to solve complex problems. The output from each layer is given as input to all neurons of the next layers.</p>
+                </address>
            </div> 
 
            <div class="col-md-12 col-sm-12">
